--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,15 @@ authors = ["Ian Kettlewell"]
 edition = "2018"
 
 [features]
-default = ["audio_manager", "wav"]
-audio_manager = ["rtrb"]
+default = ["wav"]
 wav = ["hound"]
 
 [dependencies]
-rtrb = {version = "0.1.1", optional = true}
 hound = {version = "3.4.0", optional = true}
+
+[target.'cfg(target_arch="wasm32")'.dependencies]
+wasm-bindgen = "0.2.*"
+wasm_set_stack_pointer = {path = "../wasm_set_stack_pointer"}
 
 [target.'cfg(windows)'.dependencies]
 winapi = { version = "0.3", features = ["winuser", "mmdeviceapi", "combaseapi", "objbase", "audioclient", "audiosessiontypes", "synchapi", "winbase", "minwindef"] }
